# effective-haskell

./: .gitignore  README.md  chapter-01.org  chapter-02.org  chapter-03.org  chapter-04.org  chapter-05.org  chapter-06.org  chapter-07.org  chapter-08.org
chapter-01/: Main.hs
chapter-07/: Calculator1.hs  Calculator2.hs  Replace.hs  input
chapter-08/hcat/: hcat.cabal
chapter-08/hcat/app/: Main.hs
chapter-08/hcat/src/: HCat.hs  HCat2.hs  HCat3.hs  HCat4.hs
