cabal-version:      2.4
name:               hcat
version:            0.1.0.0
synopsis:           Command line pager

author:             gabriele.lana
maintainer:         gabriele.lana@gmail.com

library
    hs-source-dirs:   src
    exposed-modules:  HCat, HCat2, HCat3, HCat4
    build-depends:    base
                    , bytestring
                    , text
                    , process
                    , directory
                    , time
    default-language: Haskell2010

executable hcat
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base, hcat
    default-language: Haskell2010
